--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>KEEPer App</title>
+    <title>Suite Spot</title>
     <link
       href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
       rel="stylesheet"
     />
+    <link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+  integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+  crossorigin="anonymous"
+/>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
